--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         python-version: ["3.5", "3.6", "3.7", "3.8", "pypy-3.7"]
         mongodb-version: ["4.4"]
-        pymongo-version: ["3.11.0", "4.0.0"]
+        pymongo-version: ["v3.11", "v4.0"]
 
     steps:
       - uses: actions/checkout@v2
@@ -30,6 +30,12 @@ jobs:
             ${{ runner.os }}-pip-
       - name: Test with python
         run: |
-          python -m pip install pymongo==${{ matrix.pymongo-version }}
+          cd ..
+          git clone git@github.com:mongodb/mongo-python-driver.git
+          cd mongo-python-driver
+          git checkout ${{ matrix.pymongo-version }}
+          python -m pip install -e .
+          cp test/{utils_spec_runner.py, utils.py, __init__.py} ../pymongoexplain/test/
+          cd ../pymongoexplain
           python -m pip install -e .
           python setup.py test
