--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Test with python
         run: |
           cd ..
-          git clone git@github.com:mongodb/mongo-python-driver.git
+          git clone https://github.com/mongodb/mongo-python-driver.git
           cd mongo-python-driver
           git checkout ${{ matrix.pymongo-version }}
           python -m pip install -e .
