make it explicit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,9 @@ jobs:
           cd mongo-python-driver
           git checkout ${{ matrix.pymongo-version }}
           python -m pip install -e .
-          cp test/{utils_spec_runner, utils, __init__}.py .
-          ./pymongoexplain/test/
+          cp test/utils_spec_runner.py ../pymongoexplain/test/
+          cp test/utils.py ../pymongoexplain/test/
+          cp test/__init__.py ../pymongoexplain/test/
           cd ../pymongoexplain
           python -m pip install -e .
           python setup.py test
