--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         pymongo-version: ["v3.11", "v4.0"]
         exclude:
           - python-version: "3.5"
-            mongodb-version: "v4.0"
+            pymongo-version: "v4.0"
 
     steps:
       - uses: actions/checkout@v2
