--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,18 +29,11 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
+          key: ${{ runner.os }}-${{ matrix.python-version}}-pip-${{ hashFiles('**/setup.py') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-${{ matrix.python-version}}-pip-
       - name: Test with python
         run: |
-          cd ..
-          git clone -b ${{ matrix.pymongo-version }} --single-branch https://github.com/mongodb/mongo-python-driver.git
-          cd mongo-python-driver
-          python -m pip install -e .
-          cp test/utils_spec_runner.py ../pymongoexplain/test/
-          cp test/utils.py ../pymongoexplain/test/
-          cp test/__init__.py ../pymongoexplain/test/
-          cd ../pymongoexplain
+          python -m pip install pymongo==${{ matrix.pymongo-version }}
           python -m pip install -e .
           python setup.py test
