--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        python-version: ["3.5", "3.6", "3.7", "3.8", "pypy-3.7"]
+        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "pypy-3.7"]
         mongodb-version: ["4.4"]
         pymongo-version: ["3.11.0", "4.0.0"]
         # pymongo 4.0 does not support python 3.5
