--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pymongoexplain"
 dynamic = ["version"]
 description = "Explainable CRUD API for PyMongo"
 readme = "README.rst"
-license = "Apache License, Version 2.0"
+license = { file = "LICENSE" }
 requires-python = ">=3.7"
 authors = [
     { name = "Julius Park" },
