--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.8.0
         with:
+          mongodb-version: "4.4"
           mongodb-replica-set: test-rs
       # add caching to reduce bandwidth and save time
       - uses: actions/cache@v3
