--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Test with python
         run: |
           python -m pip install -e ".[test]"
-          python -m pytest
+          python -m unittest discover .
