--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,30 +4,25 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "pypy-3.7"]
-        mongodb-version: ["4.4"]
-        pymongo-version: ["3.11.0", "4.0.0"]
-        # pymongo 4.0 does not support python 3.5
-        exclude:
-          - python-version: "3.5"
-            pymongo-version: "4.0.0"
-
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.7"]
+      fail-fast: true
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
       - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.7.0
+        uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-version: "4.4"
           mongodb-replica-set: test-rs
       # add caching to reduce bandwidth and save time
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-${{ matrix.python-version}}-pip-${{ hashFiles('**/setup.py') }}
@@ -35,6 +30,5 @@ jobs:
             ${{ runner.os }}-${{ matrix.python-version}}-pip-
       - name: Test with python
         run: |
-          python -m pip install pymongo==${{ matrix.pymongo-version }}
-          python -m pip install -e .
-          python setup.py test
+          python -m pip install -e ".[test]"
+          python -m unittest discover .
