Update pymongo and python support (#59)
* Update pymongo and python support

* fix install

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,7 @@ jobs:
         run: |
           python -m pip install -e ".[test]"
           python -m unittest discover .
+      - name: Test min pymongo
+        run: |
+          python -m pip install pymongo==4.9
+          python -m unittest discover .
