INTPYTHON-589 Fix PyPI upload conditional

--- a/.github/workflows/release-python.yml
+++ b/.github/workflows/release-python.yml
@@ -82,7 +82,7 @@ jobs:
         skip-existing: true
         attestations: ${{ env.DRY_RUN }}
     - name: Publish distribution 📦 to PyPI
-      if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(env.DRY_RUN, 'false')
       uses: pypa/gh-action-pypi-publish@release/v1
 
   post-publish:
