--- a/.github/workflows/dist-python.yml
+++ b/.github/workflows/dist-python.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           # Build sdist on lowest supported Python
-          python-version: '3.9'
+          python-version: "3.10"
 
       - name: Install python requirements
         run: |
